--- a/arch/arm/configs/tegra_android_defconfig
+++ b/arch/arm/configs/tegra_android_defconfig
@@ -330,6 +330,7 @@ CONFIG_SND_SOC_TEGRA_WM8903=y
 CONFIG_DSP_FM34=y
 CONFIG_HEADSET_FUNCTION=y
 CONFIG_HID_SONY=y
+CONFIG_HID_APPLE=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_DEVICEFS=y
@@ -356,6 +357,8 @@ CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_TEGRA=y
+CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
+CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_SWITCH=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_MAX8907C=y
